full page header, less words, formatting

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a class="page-scroll" href="#capstone">Research</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#work">Other Writing</a>
+                        <a class="page-scroll" href="#work">Writing</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -88,9 +88,9 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Me</h2>
                 <hr>
-                <p> Welcome to my site! My name is Joe Ostrow, and I'm a recent graduate of the University of Michigan, where I earned a B.S. in Biopsychology, Cognition & Neuroscience (BCN), and minored in Writing and Spanish.</p>
-                <p>As a student at U of M, I was involved in a couple research projects, first in the field of bioinformatics, and secondly in music cognition. You can find links to some of my work under the "Research" tab. Moving forward, I hope to gain more experience in neuroscience and psychology research, whether in a lab setting or elsewhere, before continuing on to graduate school.</p> 
-                <p>Also showcased here are several examples of writing that I completed while a college student, ranging both in subject and genre. Perhaps the one I am most proud of is the piece on Medium, which is an exploration of why people (myself included) create music. You can read more about it, and find the actual piece, under the "Other Writing" tab.</p> 
+                <p> Welcome! My name is Joe Ostrow, and I'm a recent graduate of the University of Michigan, where I earned a B.S. in Biopsychology, Cognition & Neuroscience (BCN), and minored in Writing and Spanish.</p>
+                <p>As a student at U of M, I was involved in a couple research projects, both of which you can find information about under the "Research" tab. Moving forward, I hope to gain more experience in the fields of neuroscience and psychology, whether in a lab setting or elsewhere, before continuing on to graduate school.</p> 
+                <p>Also showcased here are several examples of writing that I completed while a college student, ranging both in subject and genre. Perhaps the one I am most proud of is the piece on Medium, which is an exploration of why people (myself included) create music. You can read more about it (and find the actual piece) under the "Writing" tab.</p> 
                 <p>Finally, I am also a lifelong musician, classically trained in double bass, as well as an avid guitar player, and aspiring composer and producer. While it is not here yet, expect a "Music" tab soon!</p>
             </div>
         </div>
@@ -122,10 +122,10 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-md-offset-4 text-center">
-            <h2>Other Writing</h2>
+            <h2>Writing</h2>
             <hr>
           </div>
-          <div class="col-md-6 col-md-offset-3">
+          <div class="col-md-8 col-md-offset-2">
           <h4><a href="https://medium.com/capstone-project" target="_blank">Lost in the Notes: An Exploration of Why We Make Music</a></h4>
           <p>My Capstone Project for the University of Michigan Minor in Writing. This piece functions as a personal reflection intertwined with a series of interviews, both centered around the question of why people create music, and why it is ultimately important.</p>
           <hr>
@@ -149,7 +149,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Me</h2>
                 <hr>
-                <p class="pcenter">Please feel free to email me!</p>
+                <p class="pcenter">Please feel free to email me! And <a href="workFiles/Resume_JosephOstrow.pdf" target="_blank">here's</a> my resume.</p>
                 <p class="pcenter"><a href="mailto:jstro@umich.edu" target="_blank";>jstro@umich.edu</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
@@ -170,7 +170,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p class="pcenter">Copyright &copy; Joseph Ostrow 2014</p>
+            <p class="pcenter">Copyright &copy; Joseph Ostrow 2015</p>
         </div>
     </footer>
 
