--- a/index.html
+++ b/index.html
@@ -1,191 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Joseph Ostrow - Capstone Portfolio</title>
-
-
-
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="description" content="Researcher, Writer, Musician, recent graduate of the University of Michigan">
+    <meta name="author" content="Joseph Ostrow">
     <link href="favicon.ico" rel="icon">
 
-    <!-- Custom CSS -->
-    
-    <link href="css/grayscaleCustom.css" rel="stylesheet">
+    <title>Joseph Ostrow</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-        <div class="container">
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-                <ul class="nav navbar-nav">
-                    <li text-align: left>
-                        <a class="page-scroll" href="#page-top">Home</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#about">About Me</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#capstone">Research</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#work">Writing</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-
-<!-- Page Header -->
-    <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('img/SanSebastianBlur.jpg')">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <div class="page-heading">
-                        <h1>Joseph Ostrow</h1>
-                        <hr>
-                        <span class="subheading">Researcher, Writer, Musician</span>
-                    </div>
-                </div>
-            </div>
-        </div>
+<body class="container">
+    <header>
+        <h1>Joseph Ostrow</h1>
+        <h3 class="subtitle">Researcher &bull; Writer &bull; Musician</h3>
     </header>
 
-    <!-- About Section -->
-    <section id="about" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Me</h2>
-                <hr>
-                <p> Welcome! My name is Joe Ostrow, and I'm a recent graduate of the University of Michigan, where I earned a B.S. in Biopsychology, Cognition & Neuroscience (BCN), and minored in Writing and Spanish.</p>
-                <p>As a student at U of M, I was involved in a couple research projects, both of which you can find information about under the "Research" tab. Moving forward, I hope to gain more experience in the fields of neuroscience and psychology, whether in a lab setting or elsewhere, before continuing on to graduate school.</p> 
-                <p>Also showcased here are several examples of writing that I completed while a college student, ranging both in subject and genre. Perhaps the one I am most proud of is the piece on Medium, which is an exploration of why people (myself included) create music. You can read more about it (and find the actual piece) under the "Writing" tab.</p> 
-                <p>Finally, I am also a lifelong musician, classically trained in double bass, as well as an avid guitar player, and aspiring composer and producer. While it is not here yet, expect a "Music" tab soon!</p>
-            </div>
-        </div>
+    <section>
+        <h2>Research</h2>
+
+        <ul class="wide-list">
+            <li><a href="workFiles/Poster_UROP_Final(2).pdf">Curation and Analysis of Host Gene Responses induced by Live Attenuated and Trivalent Inactivated Influenza Vaccines [PDF]</a></li>
+            <li><a href="http://www.ncbi.nlm.nih.gov/pubmed/24259431">Updates on the web-based VIOLIN vaccine database and analysis system.</a></li>
+            <li><a href="workFiles/SMPC2015ConradCorey.pdf">Attributes of Songs People Love and Listen to Most Often [PDF]</a></li>
+        </ul>
     </section>
 
-    <!-- Capstone Portlio Section -->
-    <section id="capstone" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Research</h2>
-                <hr>
-                    <h4><a href="workFiles/Poster_UROP_Final(2).pdf" target="_blank">"Curation and Analysis of Host Gene Responses induced by Live Attenuated and Trivalent Inactivated Influenza Vaccines"</a></h4>
-                     <p>A poster I created while working as an undergraduate research assistant in the lab of Dr. Yongqun "Oliver" He, showing specific genes that can predict the efficacy of two types of influenza vaccines.</p> 
-                        <hr>
-                    <h4><a href="http://www.ncbi.nlm.nih.gov/pubmed/24259431" target="_blank">"Updates on the web-based VIOLIN vaccine database and analysis system."</a></h4>
-                     <p>A paper that I co-authored, also during my time in Dr. He's lab. It focuses on a number of updates made to the VIOLIN vaccine database from 2008-2013.</p> 
-                        <hr>
-                    <h4><a href="workFiles/SMPC2015ConradCorey.pdf" target="_blank">"Attributes of Songs People Love and Listen to Most Often"</a></h4>
-                     <p>A presentation that I co-authored and helped present at the 2015 Society for Music Perception and Cognition Conference. It details our lab's exploratory study on emotional responses people have to the music they listen to most often.</p> 
-
-            </div>
-        </div>
-    </section>
-    <!-- Work Section -->
-    <section id="work" class="container content-section text-center">
-        <div class="row">
-    <!-- Portfolio -->
-    <div id ="portfolio" class="portfolio">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 col-md-offset-4 text-center">
-            <h2>Writing</h2>
-            <hr>
-          </div>
-          <div class="col-md-8 col-md-offset-2">
-          <h4><a href="https://medium.com/capstone-project" target="_blank">Lost in the Notes: An Exploration of Why We Make Music</a></h4>
-          <p>My Capstone Project for the University of Michigan Minor in Writing. This piece functions as a personal reflection intertwined with a series of interviews, both centered around the question of why people create music, and why it is ultimately important.</p>
-          <hr>
-          <h4><a href="workFiles/OnTheRunReview.pdf" target="_blank">"On The Run" Review</a></h4>
-          <p>My review of Alice Goffman's recent urban ethnography, "On The Run." Written after seven years of field work, it documents police surveillance and brutality in a primarily black, working class neighborhood of Philadelphia.</p>
-          <hr>
-          <h4><a href="workFiles/PsychCriticalReview.pdf" target="_blank">Turnbull Paper Critical Review</a></h4>
-          <p>My critical review of Colin Turnbull's 1961 report on the unique perceptual abilities of the Mbuti pygmies of the then-Belgian Congo.</p>
-          <hr>
-          <h4><a href="workFiles/EnsayoFinalLaProblemaDeLaUniversal.pdf" target="_blank">La Problema de la Universal</a></h4>
-          <p>The final essay for my Spanish course, "Marketing Latinamericanism," this is a critique of Universalism using examples from authors such as Idelber Avelar, José Luis Venegas, Sarah Brouillete, and Borges.</p>
-        </div>
-      </div>
-    </div>
-    <!-- /Portfolio -->
-        </div>
-    </section>
-    <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Me</h2>
-                <hr>
-                <p class="pcenter">Please feel free to email me! And <a href="workFiles/Resume_JosephOstrow.pdf" target="_blank">here's</a> my resume.</p>
-                <p class="pcenter"><a href="mailto:jstro@umich.edu" target="_blank";>jstro@umich.edu</a>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://medium.com/@joeostrow" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-medium fa-fw"></i> <span class="network-name">Medium</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/JSTRO" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/pub/joseph-ostrow/63/a7b/715" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn+</span></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+    <section>
+        <h2>Writing</h2>
+        <ul class="wide-list">
+            <li><a href="https://medium.com/capstone-project">Lost in the Notes: An Exploration of Why We Make Music</a></li>
+            <li><a href="workFiles/OnTheRunReview.pdf">"On The Run" Review</a></li>
+            <li><a href="workFiles/PsychCriticalReview.pdf">Turnbull Paper Critical Review</a></li>
+            <li><a href="workFiles/EnsayoFinalLaProblemaDeLaUniversal.pdf">La Problema de la Universal</a></li>
+        </ul>
     </section>
 
-    <!-- Footer -->
+    <section>
+        <h2>Contact</h2>
+        <p class="wide-list"><a href="workFiles/Resume_JosephOstrow.pdf">Resum&#233;</a> &bull; <a href="mailto:jstro@umich.edu">Email</a> &bull; <a href="https://medium.com/@joeostrow">Medium</a> &bull; <a href="https://www.linkedin.com/pub/joseph-ostrow/63/a7b/715">LinkedIn</a> &bull; <a href="https://github.com/JSTRO">GitHub</a></p>
+
+    </section>
+
     <footer>
-        <div class="container text-center">
-            <p class="pcenter">Copyright &copy; Joseph Ostrow 2015</p>
-        </div>
+        <p>Joseph Ostrow &copy; 2015</p>
     </footer>
-
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="js/jquery.easing.min.js"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="js/grayscale.js"></script>
-
 </body>
 
 </html>
