minor content changes

--- a/index.html
+++ b/index.html
@@ -31,25 +31,33 @@
         <h2>Research</h2>
 
         <ul class="wide-list">
-            <li><a href="workFiles/Poster_UROP_Final(2).pdf">Curation and Analysis of Host Gene Responses induced by Live Attenuated and Trivalent Inactivated Influenza Vaccines [PDF]</a></li>
-            <li><a href="http://www.ncbi.nlm.nih.gov/pubmed/24259431">Updates on the web-based VIOLIN vaccine database and analysis system.</a></li>
-            <li><a href="workFiles/SMPC2015ConradCorey.pdf">Attributes of Songs People Love and Listen to Most Often [PDF]</a></li>
+            <li><a href="workFiles/Poster_UROP_Final(2).pdf" target="_blank">Curation and Analysis of Host Gene Responses induced by Live Attenuated and Trivalent Inactivated Influenza Vaccines [PDF]</a></li>
+            <li><a href="http://www.ncbi.nlm.nih.gov/pubmed/24259431" target="_blank">Updates on the web-based VIOLIN vaccine database and analysis system.</a></li>
+            <li><a href="workFiles/SMPC2015ConradCorey.pdf" target="_blank">Attributes of Songs People Love and Listen to Most Often [PDF]</a></li>
         </ul>
     </section>
 
     <section>
-        <h2>Writing</h2>
+        <h2>Selected Writing</h2>
         <ul class="wide-list">
-            <li><a href="https://medium.com/capstone-project">Lost in the Notes: An Exploration of Why We Make Music</a></li>
-            <li><a href="workFiles/OnTheRunReview.pdf">"On The Run" Review</a></li>
-            <li><a href="workFiles/PsychCriticalReview.pdf">Turnbull Paper Critical Review</a></li>
-            <li><a href="workFiles/EnsayoFinalLaProblemaDeLaUniversal.pdf">La Problema de la Universal</a></li>
+            <li><a href="https://medium.com/capstone-project" target="_blank">Lost in the Notes: An Exploration of Why We Make Music</a></li>
+            <li><a href="workFiles/PSYCH359ResearchReport.pdf" target="_blank">Type 2 Diabetes Prevalence Across Wealth Quintiles</a></li>
+            <li><a href="workFiles/OnTheRunReview.pdf" target="_blank">Review: "On The Run" </a></li>
+            <li><a href="workFiles/PsychCriticalReview.pdf" target="_blank">Review: Turnbull (1961)</a></li>
+            <li><a href="workFiles/EnsayoFinalLaProblemaDeLaUniversal.pdf" target="_blank">La Problema de la Universal</a></li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Music</h2>
+        <ul class="wide-list">
+            <li><a href="https://soundcloud.com/jstromusic" target="_blank">JSTR&#216;</a></li>
         </ul>
     </section>
 
     <section>
         <h2>Contact</h2>
-        <p class="wide-list"><a href="workFiles/Resume_JosephOstrow.pdf">Resum&#233;</a> &bull; <a href="mailto:jstro@umich.edu">Email</a> &bull; <a href="https://medium.com/@joeostrow">Medium</a> &bull; <a href="https://www.linkedin.com/pub/joseph-ostrow/63/a7b/715">LinkedIn</a> &bull; <a href="https://github.com/JSTRO">GitHub</a></p>
+        <p class="wide-list"><a href="workFiles/Resume_JosephOstrow.pdf" target="_blank">Resum&#233;</a> &bull; <a href="mailto:jstro@umich.edu" target="_blank">Email</a> &bull; <a href="https://medium.com/@joeostrow" target="_blank">Medium</a> &bull; <a href="https://www.linkedin.com/pub/joseph-ostrow/63/a7b/715" target="_blank">LinkedIn</a> <!-- &bull; <a href="https://github.com/JSTRO" target="_blank">GitHub</a> --></p>
 
     </section>
 
