--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Joseph Ostrow</title>
 
-    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/normalize.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
 </head>
